# OOS

./: README.md
proxy/: CMakeLists.txt  README.md
proxy/src/: main.cpp
proxy/src/cache/: cache.cpp  cache.hpp
proxy/src/multithreading/: thread_pool.cpp  thread_pool.hpp
proxy/src/proxy/: proxy.cpp  proxy.hpp  proxy_task.cpp  proxy_task.hpp  request_monitor.cpp  request_monitor.hpp
proxy/src/util/error/: error.cpp  error.hpp
proxy/src/util/http_parser/: http_parser.cpp  http_parser.hpp
synchronization/: README.md
synchronization/1/: README.md
synchronization/1/src/: queue-threads.c  queue.c  queue.h
synchronization/2/: README.md
synchronization/2/condition_variable/: queue.c  queue.h
synchronization/2/mutex/: queue.c  queue.h
synchronization/2/semaphore/: queue.c  queue.h
synchronization/2/spinlock/: Makefile  queue-threads.c  queue.c  queue.h
synchronization/3/: Makefile  README.md
synchronization/3/src/lock/mutex/: mutex.c
synchronization/3/src/lock/rw_lock/: rw_lock.c
synchronization/3/src/lock/spinlock/: spinlock.c
synchronization/3/src/storage/: storage.c
synchronization/3/src/util/: util.c  util.h
synchronization/4/: README.md
synchronization/4/src/mutex/: mutex.c  mutex.h
synchronization/4/src/spinlock/: spinlock.c  spinlock.h
synchronization/4/src/testing/: Makefile  main.c
synchronization/4/src/testing/lock/: lock.h
synchronization/4/src/testing/lock/mutex/: mutex.c
synchronization/4/src/testing/lock/spinlock/: spinlock.c
synchronization/4/src/testing/storage/: storage.h
